fix(simple-toast): fixed dismiss button alignment
fixed dismiss button alignment

COMUI-1485

--- a/src/components/stable/gux-dismiss-button/gux-dismiss-button.less
+++ b/src/components/stable/gux-dismiss-button/gux-dismiss-button.less
@@ -23,8 +23,8 @@ button {
   }
 
   gux-icon {
-    width: 15px;
-    height: 15px;
+    width: 16px;
+    height: 16px;
     margin: @gux-spacing-2xs;
     border-radius: 4px;
   }
