--- a/src/components/stable/gux-simple-toast/gux-simple-toast.less
+++ b/src/components/stable/gux-simple-toast/gux-simple-toast.less
@@ -11,7 +11,6 @@
   align-items: flex-start;
   justify-content: flex-start;
   width: 286px;
-  padding: 8px 16px;
   margin-bottom: 4px;
   color: @gux-type;
   background: @gux-grey-90;
@@ -25,6 +24,7 @@
   flex: 0 1 auto;
   align-self: auto;
   order: 0;
+  padding: 8px 12px 8px 16px;
   margin: @gux-spacing-3xs 0;
 
   &.gux-alert {
@@ -53,5 +53,9 @@
   flex: 1 1 auto;
   align-self: center;
   order: 0;
-  margin: 0 12px 0 8px;
+  margin: 8px 0;
+}
+
+.gux-dismiss {
+  margin: 4px 0;
 }
